--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                                           <!-- Hero Section -->
 
     <section class="relative h-screen flex items-center justify-center overflow-hidden">
-        <img src="D:\DATA\Project Sample\Photography blog-site\img\nature.jpg"  class="absolute w-full h-full object-cover" />
+        <img src=https://github.com/aadhi-sankaran/Photography-Blogging-site/blob/main/img/nature.jpg  class="absolute w-full h-full object-cover" />
         <div class="absolute inset-0 bg-black bg-opacity-40"></div>
         <div class="relative z-10 text-center px-6 animate-fade-in">
             <h1 class="text-4xl md:text-6xl font-bold text-white mb-4">	Unveil the Perfect Shot</h1>
@@ -376,4 +376,5 @@
     </div>
   
 </body>
+
 </html> 
